<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectModeFragment">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_select_robot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/select_robot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.25" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/square_message"
            app:layout_constraintBottom_toBottomOf="@id/square_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/square_message"
            android:src="@drawable/mic_anim"
            />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/square_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/squar_message_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_Mainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_ment"
            android:textColor="@color/main_textColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/square_message"
            app:layout_constraintEnd_toEndOf="@id/square_message"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="@id/square_message"
            app:layout_constraintTop_toTopOf="@id/square_message" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_carry_mode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/carry_mode_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/square_message"
            app:layout_constraintBottom_toTopOf="@id/btn_behavior_mode"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carry_mode_title"
                android:textColor="@color/navi_textColor"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_behavior_mode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/behavior_mode_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_carry_mode"
            app:layout_constraintBottom_toTopOf="@id/btn_change_mode"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_behavior_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/behavior_mode_title"
                android:textColor="@color/navi_textColor"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_behavior_subtitle"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_behavior_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/behavior_mode_title_sub"
                android:textColor="@color/navi_textColor"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/tv_behavior_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_behavior_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_change_mode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/change_mode_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_all_mode"
            app:layout_constraintTop_toBottomOf="@id/btn_behavior_mode"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_change_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_mode_title"
                android:textColor="@color/navi_textColor"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_change_subtitle"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_change_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/change_mode_title_sub"
                android:textColor="@color/navi_textColor"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/tv_change_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_change_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_all_mode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/all_mode_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_change_mode"
            app:layout_constraintWidth_default="percent"
            android:layout_marginBottom="70dp"
            app:layout_constraintWidth_percent="0.5">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_all_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_mode_title"
                android:textColor="@color/navi_textColor"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_all_subtitle"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_all_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/all_mode_title_sub"
                android:textColor="@color/navi_textColor"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/tv_all_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_all_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>