<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_backgroundColor"
    tools:context=".NewAccountFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/main_textColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_ID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_edittext_background"
        android:drawablePadding="20dp"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/text_password"
        android:textColor="@color/main_textColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/et_user_ID" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_Password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_edittext_background"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/text_password_confirm"
        android:textColor="@color/main_textColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/et_user_Password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_Password_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_edittext_background"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_confirm"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/text_user_phone_number"
        android:textColor="@color/main_textColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/et_user_Password_confirm" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_phone_Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_edittext_background"
        android:drawablePadding="20dp"
        android:inputType="phone"
        android:paddingStart="30dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_Number"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/sub_navi_button"
        android:text="@string/btn_back_title"
        android:textColor="@color/navi_textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/back_ic"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/et_user_phone_Number"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/example_play_button"
        android:text="@string/btn_join_title"
        android:textColor="@color/navi_textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/circle_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/circle_message_ic"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.55" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_join_ment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="정보를 입력한 후\n 등록하기 버튼을 누르세요."
        android:textColor="@color/main_textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@id/circle_message"
        app:layout_constraintEnd_toEndOf="@id/circle_message"
        app:layout_constraintTop_toTopOf="@id/circle_message"
        app:layout_constraintBottom_toBottomOf="@id/circle_message" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_select_robot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/join_robot_ic"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>